gcc/testsuite/obj-c++.dg/syntax-error-5.mm
/* { dg-do compile } */

typedef struct S { int i; } NSDictionary;

@interface A 
{
}
@end

@interface B : A
{
    NSDictionary * _userInfo;
@end				/* { dg-error "expected .\}. before .end."  } */
